Added support for my new FeatherS2 Neo esp32s2 board

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -533,6 +533,7 @@ jobs:
         - "targett_module_clip_wroom"
         - "targett_module_clip_wrover"
         - "unexpectedmaker_feathers2"
+        - "unexpectedmaker_feathers2_neo"
         - "unexpectedmaker_feathers2_prerelease"
         - "unexpectedmaker_tinys2"
 
