rp2: Fix build with virtual frozen directory.
The fix ensures main.c is included when searching for qstrs like
MP_QSTR_Foo. This requires including tinyusb header files during
the qstr preprocessing step and also requires setting the
MICROPY_MODULE_FROZEN compile definition (this is for the step
that generates qstr.i.last - during the later compile stage
the define is correctly set).

--- a/ports/rp2/CMakeLists.txt
+++ b/ports/rp2/CMakeLists.txt
@@ -123,6 +123,7 @@ set(MICROPY_SOURCE_QSTR
     ${PROJECT_SOURCE_DIR}/modutime.c
     ${PROJECT_SOURCE_DIR}/rp2_flash.c
     ${PROJECT_SOURCE_DIR}/rp2_pio.c
+    ${PROJECT_SOURCE_DIR}/main.c
 )
 
 set(PICO_SDK_COMPONENTS
@@ -181,6 +182,7 @@ target_include_directories(${MICROPY_TARGET} PRIVATE
     ${MICROPY_BOARD_DIR}
     "${PROJECT_SOURCE_DIR}"
     "${CMAKE_BINARY_DIR}"
+    "${PICO_TINYUSB_PATH}/src"
 )
 
 target_compile_options(${MICROPY_TARGET} PRIVATE
@@ -212,6 +214,7 @@ target_compile_definitions(${MICROPY_TARGET} PRIVATE
     PICO_PROGRAM_NAME="MicroPython"
     PICO_NO_PROGRAM_VERSION_STRING=1 # do it ourselves in main.c
     MICROPY_BUILD_TYPE="${CMAKE_C_COMPILER_ID} ${CMAKE_C_COMPILER_VERSION} ${CMAKE_BUILD_TYPE}"
+    MICROPY_MODULE_FROZEN=1
     PICO_NO_BI_STDIO_UART=1 # we call it UART REPL
     PICO_RP2040_USB_DEVICE_ENUMERATION_FIX=1
 )
