.github/workflows small fixes
Shorter names

Run on all branches. This is important because bugfixes and features are usuaully developed on a branch, and we want to test it before merging to master

--- a/.github/workflows/unix_port.yml
+++ b/.github/workflows/unix_port.yml
@@ -1,10 +1,8 @@
-name: Build lv_micropython unix port
+name: unix port
 
 on:
   push:
-    branches: [ master, lvgl_javascript ]
   pull_request:
-    branches: [ master, lvgl_javascript ]
 
 jobs:
   build:
