machine.bitstream: Refactor the ESP32, rp2 and mimxrt versions.
These three are now identical and use linker methods for
moving machine_bitstream to IRAM.
All hardware depedent code is in the respective mphalport.h
and the linker scripts.

--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -164,6 +164,7 @@ idf_component_register(
         ${CMAKE_BINARY_DIR}
     REQUIRES
         ${IDF_COMPONENTS}
+    LDFRAGMENTS "linker.lf"
 )
 
 # Set the MicroPython target as the current (main) IDF component target.
