machine_bitstream: Move machine_bitstream to drivers/bitstream.
- Adapt the Make files for esp32, rp2 and mimxrt and remove the local
  machine_bitstream.c copies.
- Rename mp_hal_ticks_cpu_init to mp_hal_ticks_cpu_enable to match
  the existing code of esp8266 and stm32.
- Rename mp_hal_ticks_cpu_reset to mp_hal_ticks_cpu_start. It sounds
  like a more appropriate name.

--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -41,6 +41,7 @@ endif()
 set(MICROPY_SOURCE_DRIVERS
     ${MICROPY_DIR}/drivers/bus/softspi.c
     ${MICROPY_DIR}/drivers/dht/dht.c
+    ${MICROPY_DIR}/drivers/bitstream/machine_bitstream.c
 )
 
 set(MICROPY_SOURCE_PORT
@@ -54,7 +55,6 @@ set(MICROPY_SOURCE_PORT
     ${PROJECT_DIR}/help.c
     ${PROJECT_DIR}/modutime.c
     ${PROJECT_DIR}/moduos.c
-    ${PROJECT_DIR}/machine_bitstream.c
     ${PROJECT_DIR}/machine_timer.c
     ${PROJECT_DIR}/machine_pin.c
     ${PROJECT_DIR}/machine_touchpad.c
