--- a/ports/rp2/CMakeLists.txt
+++ b/ports/rp2/CMakeLists.txt
@@ -79,12 +79,12 @@ set(MICROPY_SOURCE_LIB
 
 set(MICROPY_SOURCE_DRIVERS
     ${MICROPY_DIR}/drivers/bus/softspi.c
+    ${MICROPY_DIR}/drivers/bitstream/machine_bitstream.c
 )
 
 set(MICROPY_SOURCE_PORT
     fatfs_port.c
     machine_adc.c
-    machine_bitstream.c
     machine_i2c.c
     machine_pin.c
     machine_rtc.c
