--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -291,7 +291,7 @@ jobs:
         - "makerdiary_nrf52840_mdk"
         - "makerdiary_nrf52840_mdk_usb_dongle"
         - "matrixportal_m4"
-        - "melopero_shake"
+        - "melopero_shake_rp2040"
         - "meowbit_v121"
         - "meowmeow"
         - "metro_m0_express"
