--- a/ports/esp32/main/CMakeLists.txt
+++ b/ports/esp32/main/CMakeLists.txt
@@ -62,6 +62,7 @@ set(MICROPY_SOURCE_PORT
     ${PROJECT_DIR}/esp32_nvs.c
     ${PROJECT_DIR}/esp32_partition.c
     ${PROJECT_DIR}/esp32_rmt.c
+    ${PROJECT_DIR}/esp32_pcnt.c
     ${PROJECT_DIR}/esp32_ulp.c
     ${PROJECT_DIR}/modesp32.c
     ${PROJECT_DIR}/espneopixel.c
@@ -70,7 +71,6 @@ set(MICROPY_SOURCE_PORT
     ${PROJECT_DIR}/mpthreadport.c
     ${PROJECT_DIR}/machine_rtc.c
     ${PROJECT_DIR}/machine_sdcard.c
-)
 
 set(MICROPY_SOURCE_QSTR
     ${MICROPY_SOURCE_PY}
