fix name of windows mpy-cross executable
.. since 1.17, the main part of the build system takes care of adding
the ".exe" extension.

--- a/mpy-cross/Makefile.static-mingw
+++ b/mpy-cross/Makefile.static-mingw
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier: MIT
 
-PROG=mpy-cross.static.exe
+PROG=mpy-cross.static
 CROSS_COMPILE = x86_64-w64-mingw32-
 BUILD=build-static-mingw
 STATIC_BUILD=1
