Support FreeType if available

--- a/ports/unix/Makefile
+++ b/ports/unix/Makefile
@@ -266,6 +266,12 @@ ifeq ($(RLOTTIE_AVAILABLE),0)
 	LDFLAGS_MOD += -lrlottie
 endif
 
+CFLAGS_MOD += -I/usr/local/include/freetype2
+FREETYPE_AVAILABLE := $(shell echo 'void main(){}' | $(CC) -lfreetype -x c -o /dev/null - 2> /dev/null; echo $$?)
+ifeq ($(FREETYPE_AVAILABLE),0)
+	LDFLAGS_MOD += -lfreetype
+endif
+
 SRC_CXX += \
 	$(SRC_MOD_CXX)
 
