--- a/ports/unix/Makefile
+++ b/ports/unix/Makefile
@@ -220,6 +220,18 @@ CFLAGS_MOD += -I/usr/lib/jvm/java-7-openjdk-amd64/include -DMICROPY_PY_JNI=1
 SRC_MOD += modjni.c
 endif
 
+# Additional optional libraries
+
+RLOTTIE_CFLAGS_MOD :=  $(shell pkg-config --silence-errors --cflags rlottie)
+CFLAGS_MOD += $(RLOTTIE_CFLAGS_MOD)
+RLOTTIE_LDFLAGS_MOD := $(shell pkg-config --silence-errors --libs   rlottie)
+LDFLAGS_MOD += $(RLOTTIE_LDFLAGS_MOD)
+
+FREETYPE_CFLAGS_MOD :=  $(shell pkg-config --silence-errors --cflags freetype2)
+CFLAGS_MOD += $(FREETYPE_CFLAGS_MOD)
+FREETYPE_LDFLAGS_MOD := $(shell pkg-config --silence-errors --libs   freetype2)
+LDFLAGS_MOD += $(FREETYPE_LDFLAGS_MOD)
+
 # source files
 SRC_C += \
 	main.c \
